View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031375 | Open CASCADE | OCCT:Visualization | public | 2020-02-17 12:46 | 2020-12-02 17:12 |
Reporter | kgv | Assigned To | kgv | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.5.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031375: Visualization, TKOpenGl - suppress warning on WebGL 1.0 | ||||
Description | OpenGl_Context::ReadGlVersion() generates a warning about invalid enumeration when called on WebGL 1.0 context. Although this error is expected, they are also unconditionally printed to JavaScript console, which is undesired. This is a regression since 0030600. Error: WebGL warning: getParameter: pname: invalid enum value <enum 0x821b> occt-webgl-sample.js:1:140211 Error: WebGL warning: getParameter: pname: invalid enum value <enum 0x821c> occt-webgl-sample.js:1:140211 | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR31375 has been created by kgv. SHA-1: 6a2ec6dd5d03d7e49535540e569e28e44e0acd3a Detailed log of new commits: Author: kgv Date: Mon Feb 17 13:59:58 2020 +0300 0031375: Visualization, TKOpenGl - suppress warning on WebGL 1.0 Check for WebGL version in advance. |
|
Patch is ready for review. |
|
Branch CR31375 has been updated forcibly by kgv. SHA-1: c64efd9e3083eb39d274021b0b82d78930132e85 |
|
The patch was reviewed without remarks |
|
Fix has been tested in framework of IR-2020-02-22 Combination - OCCT branch : IR-2020-02-22 master SHA - 0950253ca6a21ca4d114a8743b4b9990ec0398be fe4497f3246e6bc1ced97ac331c148f0809ded15 Products branch : IR-2020-02-22 SHA - 7fcdb8a1da7b1467a779e4ef1bbb4b2746e6ffb8 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17017.87000000002 / 17024.610000000095 [-0.04%] Products Total CPU difference: 12533.37000000014 / 12614.3600000001 [-0.64%] Windows-64-VC14: OCCT Total CPU difference: 18397.9375 / 18472.453125 [-0.40%] Products Total CPU difference: 14483.234375 / 14513.703125 [-0.21%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR31375 has been deleted by inv. SHA-1: c64efd9e3083eb39d274021b0b82d78930132e85 |
Date Modified | Username | Field | Change |
---|---|---|---|
2020-02-17 12:46 | kgv | New Issue | |
2020-02-17 12:46 | kgv | Assigned To | => kgv |
2020-02-17 12:46 | kgv | Relationship added | child of 0030600 |
2020-02-17 12:46 | kgv | Description Updated | |
2020-02-17 13:47 | kgv | Description Updated | |
2020-02-17 14:04 | git | Note Added: 0090570 | |
2020-02-17 14:09 | kgv | Note Added: 0090571 | |
2020-02-17 14:09 | kgv | Assigned To | kgv => osa |
2020-02-17 14:09 | kgv | Status | new => resolved |
2020-02-17 14:36 | git | Note Added: 0090575 | |
2020-02-19 10:26 | osa | Note Added: 0090588 | |
2020-02-19 10:26 | osa | Assigned To | osa => bugmaster |
2020-02-19 10:26 | osa | Status | resolved => reviewed |
2020-02-23 11:57 | bugmaster | Note Added: 0090629 | |
2020-02-23 11:57 | bugmaster | Status | reviewed => tested |
2020-02-23 12:02 | bugmaster | Test case number | => Not required |
2020-02-23 12:07 | kgv | Changeset attached | => occt master c64efd9e |
2020-02-23 12:07 | kgv | Assigned To | bugmaster => kgv |
2020-02-23 12:07 | kgv | Status | tested => verified |
2020-02-23 12:07 | kgv | Resolution | open => fixed |
2020-02-23 12:25 | git | Note Added: 0090656 | |
2020-12-02 16:41 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |