0031375: Visualization, TKOpenGl - suppress warning on WebGL 1.0

Check for WebGL version in advance.